--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@farcaster/frame-sdk": "^0.1.12",
     "@farcaster/miniapp-sdk": "^0.2.1",
     "@farcaster/miniapp-wagmi-connector": "^1.1.0",
+    "@neondatabase/serverless": "^1.0.2",
+    "@poap-xyz/poap-sdk": "^0.22.0",
     "@selfxyz/core": "^1.0.8",
     "@selfxyz/qrcode": "^1.0.17",
     "@tanstack/react-query": "^5.90.16",
